# EfficientAssetRipper

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EfficientAssetRipper.sln  LICENSE  README.md  _base.py  _version.py  build.bat  build_cli.bat  build_cli.sh  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  sync.ps1
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
blender/: combine_blends.py  material_setup.py  process_asset.py
core/: asset_scanner.py  blender_runner.py  classifier.py  crash_reporter.py  everything.py  file_search.py  job_manager.py  log_redaction.py  profile_manager.py  props_parser.py  psk_reader.py  queue_checkpoint.py  texture_resolver.py  type_cache.py  unpacker.py  update_check.py
cue4parse_cli/: CUE4ParseCLI.csproj  Program.cs
data/: known_games.json  texture_presets.json
docs/: README.md  architecture.md  release-checklist.md  troubleshooting.md
fonts/: README.md
gui/: aes_prompt_dialog.py  asset_browser.py  audio_previewer.py  blend_combiner.py  color_scheme_dialog.py  color_schemes.py  log_viewer.py  main_window.py  material_overrides_dialog.py  media_previewer.py  mesh_previewer.py  profile_bar.py  profile_dialog.py  psk_picker.py  queue_panel.py  settings_panel.py  setup_wizard.py  splash.py  text_viewer.py  tga_previewer.py  theme.py  unpacker_panel.py  widgets.py
tests/: conftest.py
tests/qt/: conftest.py  (+38 more)
tools/: make_version_info.py  render_icon.py
(+49 files in other folders)
